remove small text tag

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Akamai Spot Award (November 2017)
-                            <ul><li><i><small>Akamai’s Spot Award program acknowledges and rewards exceptional contributions made by employees, while recognizing efforts that exceed normal efforts and significantly impact Akamai’s core business.</small></i></li></ul>
+                            <ul><li><i>Akamai’s Spot Award program acknowledges and rewards exceptional contributions made by employees, while recognizing efforts that exceed normal efforts and significantly impact Akamai’s core business.</i></li></ul>
                         </li>
                     </ul>
                 </div>
