minor text edits

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <h3 class="mb-0"><a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp" style="color:#343a40;">SOASTA</a></h3>
                             <br>
                             <div class="subheading mb-3">Data Scientist</div>
-                            <p> I joined SOASTA as a Data Scientist shortly after graduate school. In this new role, I was able to apply my existing quantitative training and further strengthen my computational knowledge using new tools and data frameworks. SOASTA was <a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp">acquired</a> by Akamai Technologies in April 2017.</p>
+                            <p> I joined SOASTA as a Data Scientist after graduate school. In this new role, I was able to apply my existing quantitative training and further strengthen my computational knowledge using new tools and data frameworks. SOASTA was <a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp">acquired</a> by Akamai Technologies in April 2017.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2016 - April 2017</span></div>
                     </div>
@@ -89,7 +89,7 @@
                             <br>
                             <div class="subheading mb-3">Research Assistant - Industrial Relations Section</div>
                             <p>Served as Research Assistant to Professor Alan B. Krueger.  </p>
-                            <p> I worked to provide essential updates for the Anniversary Edition of <a href="https://press.princeton.edu/books/paperback/9780691169125/myth-and-measurement">Myth and Measurement</a>.  My research involved extracting and analyzing minimum wage data from various sources including state and Federal agencies, as well as public opinion polls.</p>
+                            <p> I worked to provide essential updates for the anniversary edition of <a href="https://press.princeton.edu/books/paperback/9780691169125/myth-and-measurement">Myth and Measurement</a>.  My research involved extracting and analyzing minimum wage data from various sources including state and federal agencies, as well as public opinion polls.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2015 - August 2015</span></div>
                     </div>
