--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                         Amit Singh
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="mailto:amitsingh91@gmail.com">amitsingh91@gmail.com</a>
+                        <a href="mailto:amitsingh91@gmail.com" target="_blank" rel="noopener noreferrer">amitsingh91@gmail.com</a>
                     </div>
                     <p class="lead mb-5"> Data Scientist at Akamai.  I enjoy learning new technologies and exploring how math explains the world. </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/amit-m-singh/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/amsingh17/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/amit-m-singh/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/amsingh17/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
                         <!-- TODO: Include link to Medium page when started -->
                         <!-- <a class="social-icon" href="https://medium.com/"><i class="fab fa-medium"></i></a> -->
                     </div>
@@ -62,13 +62,13 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://www.akamai.com/" style="color:#343a40;">Akamai Technologies</a></h3>
+                            <h3 class="mb-0"><a href="https://www.akamai.com/" target="_blank" rel="noopener noreferrer" style="color:#343a40;">Akamai Technologies</a></h3>
                             <br>
                             <div class="subheading mb-3">Senior Data Scientist</div>
-                            <p>I am currently a Senior Data Scientist on the Web Performance team for <a href="https://www.akamai.com/us/en/products/performance/mpulse-real-user-monitoring.jsp">Akamai mPulse</a>.  I build statistical models from large amounts of data to identify problem areas on customer websites and recommend actionable improvements toward the end user experience. I also create compelling visualizations to communicate these insights to executive management teams.</p>
+                            <p>I am currently a Senior Data Scientist on the Web Performance team for <a href="https://www.akamai.com/us/en/products/performance/mpulse-real-user-monitoring.jsp" target="_blank" rel="noopener noreferrer">Akamai mPulse</a>.  I build statistical models from large amounts of data to identify problem areas on customer websites and recommend actionable improvements toward the end user experience. I also create compelling visualizations to communicate these insights to executive management teams.</p>
                             <br>
                             <div class="subheading mb-3"> Data Scientist</div>
-                            <p> As a member of the Professional Services team, I served as a customer facing data science consultant for many of the world’s largest brands.  I delivered ad-hoc reports and analyses to provide customers with recommendations on areas to optimize their websites by leveraging Real User Monitoring data collected by <a href="https://www.akamai.com/us/en/products/performance/mpulse-real-user-monitoring.jsp">Akamai mPulse</a>.
+                            <p> As a member of the Professional Services team, I served as a customer facing data science consultant for many of the world’s largest brands.  I delivered ad-hoc reports and analyses to provide customers with recommendations on areas to optimize their websites by leveraging Real User Monitoring data collected by <a href="https://www.akamai.com/us/en/products/performance/mpulse-real-user-monitoring.jsp" target="_blank" rel="noopener noreferrer">Akamai mPulse</a>.
 
                             <p>In mid-2018 I transitioned to the product development team for mPulse where I had the opportunity to design and implement analysis and system dashboards for both internal and external audiences.</p>
                         </div>
@@ -76,20 +76,20 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp" style="color:#343a40;">SOASTA</a></h3>
+                            <h3 class="mb-0"><a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp" target="_blank" rel="noopener noreferrer" style="color:#343a40;">SOASTA</a></h3>
                             <br>
                             <div class="subheading mb-3">Data Scientist</div>
-                            <p> I joined SOASTA as a Data Scientist after graduate school. In this new role, I was able to apply my existing quantitative training and further strengthen my computational knowledge using new tools and data frameworks. SOASTA was <a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp">acquired</a> by Akamai Technologies in April 2017.</p>
+                            <p> I joined SOASTA as a Data Scientist after graduate school. In this new role, I was able to apply my existing quantitative training and further strengthen my computational knowledge using new tools and data frameworks. SOASTA was <a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp" target="_blank" rel="noopener noreferrer">acquired</a> by Akamai Technologies in April 2017.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2016 - April 2017</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://irs.princeton.edu/" style="color:#343a40;">Princeton University</a></h3>
+                            <h3 class="mb-0"><a href="https://irs.princeton.edu/" target="_blank" rel="noopener noreferrer" style="color:#343a40;">Princeton University</a></h3>
                             <br>
                             <div class="subheading mb-3">Research Assistant - Industrial Relations Section</div>
                             <p>Served as Research Assistant to Professor Alan B. Krueger.  </p>
-                            <p> I worked to provide essential updates for the anniversary edition of <a href="https://press.princeton.edu/books/paperback/9780691169125/myth-and-measurement">Myth and Measurement</a>.  My research involved extracting and analyzing minimum wage data from various sources including state and federal agencies, as well as public opinion polls.</p>
+                            <p> I worked to provide essential updates for the anniversary edition of <a href="https://press.princeton.edu/books/paperback/9780691169125/myth-and-measurement" target="_blank" rel="noopener noreferrer">Myth and Measurement</a>.  My research involved extracting and analyzing minimum wage data from various sources including state and federal agencies, as well as public opinion polls.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2015 - August 2015</span></div>
                     </div>
@@ -126,25 +126,25 @@
                     <div class="subheading mb-3">Programming Languages &#38; Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i> 
-                            <a href="https://julialang.org/"><img border="0" alt="Julia" src="assets/img/julia-logo-color.png" width="75" height="50"></img></a></i></li>
+                            <a href="https://julialang.org/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Julia" src="assets/img/julia-logo-color.png" width="75" height="50"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://www.python.org/"><img border="0" alt="Python" src="assets/img/python-logo.png" width="75" height="70"></img></a></i></li>
+                            <a href="https://www.python.org/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Python" src="assets/img/python-logo.png" width="75" height="70"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://www.r-project.org/"><img border="0" alt="R" src="assets/img/R-logo.png" width="60" height="60"></img></a></i></li>
+                            <a href="https://www.r-project.org/" target="_blank" rel="noopener noreferrer"><img border="0" alt="R" src="assets/img/R-logo.png" width="60" height="60"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://en.wikipedia.org/wiki/SQL"><img border="0" alt="SQL" src="assets/img/sql-image.jpeg" width="55" height="60"></img></a></i></li>
+                            <a href="https://en.wikipedia.org/wiki/SQL" target="_blank" rel="noopener noreferrer"><img border="0" alt="SQL" src="assets/img/sql-image.jpeg" width="55" height="60"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://en.wikipedia.org/wiki/HTML5"><img border="0" alt="HTML5" src="assets/img/html5-logo.png" width="60" height="60"></img></a></i></li>
+                            <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank" rel="noopener noreferrer"><img border="0" alt="HTML5" src="assets/img/html5-logo.png" width="60" height="60"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://en.wikipedia.org/wiki/CSS"><img border="0" alt="CSS" src="assets/img/css-logo.png" width="60" height="60"></img></a></i></li>
+                            <a href="https://en.wikipedia.org/wiki/CSS" target="_blank" rel="noopener noreferrer"><img border="0" alt="CSS" src="assets/img/css-logo.png" width="60" height="60"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://www.javascript.com/"><img border="0" alt="Javascript" src="assets/img/js-logo.png" width="60" height="60"></img></a></i></li>
+                            <a href="https://www.javascript.com/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Javascript" src="assets/img/js-logo.png" width="60" height="60"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://git-scm.com/"><img border="0" alt="Git" src="assets/img/git-logo.png" width="60" height="60"></img></a></i></li>
+                            <a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Git" src="assets/img/git-logo.png" width="60" height="60"></img></a></i></li>
                         <li class="list-inline-item"><i> 
-                            <a href="https://www.docker.com/"><img border="0" alt="Git" src="assets/img/docker-logo.png" width="65" height="60"></img></a></i></li>                            
+                            <a href="https://www.docker.com/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Git" src="assets/img/docker-logo.png" width="65" height="60"></img></a></i></li>                            
                         <li class="list-inline-item"><i> 
-                            <a href="https://www.snowflake.com/"><img border="0" alt="Snowflake" src="assets/img/snowflake-logo.png" width="60" height="60"></img></a></i></li>
+                            <a href="https://www.snowflake.com/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Snowflake" src="assets/img/snowflake-logo.png" width="60" height="60"></img></a></i></li>
                     </ul>
                     <br> <br>
                     <div class="subheading mb-3">Collaboration Tools</div>
