--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <!-- TODO: Include Interests section -->
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:amitsingh91@gmail.com" target="_blank" rel="noopener noreferrer">amitsingh91@gmail.com</a>
                     </div>
-                    <p class="lead mb-5"> Data Scientist at Akamai.  I enjoy learning new technologies and exploring how math explains the world. </p>
+                    <p class="lead mb-5"> Data Scientist, amateur barista, tennis player. I enjoy learning new technologies and exploring how math explains the world. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/amit-m-singh/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/amsingh17/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
@@ -64,22 +64,27 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://www.akamai.com/" target="_blank" rel="noopener noreferrer" style="color:#343a40;">Akamai Technologies</a></h3>
                             <br>
-                            <div class="subheading mb-3">Senior Data Scientist</div>
-                            <p>I am currently a Senior Data Scientist on the Web Performance team for <a href="https://www.akamai.com/us/en/products/performance/mpulse-real-user-monitoring.jsp" target="_blank" rel="noopener noreferrer">Akamai mPulse</a>.  I build statistical models from large amounts of data to identify problem areas on customer websites and recommend actionable improvements toward the end user experience. I also create compelling visualizations to communicate these insights to executive management teams.</p>
-                            <br>
-                            <div class="subheading mb-3"> Data Scientist</div>
-                            <p> As a member of the Professional Services team, I served as a customer facing data science consultant for many of the world’s largest brands.  I delivered ad-hoc reports and analyses to provide customers with recommendations on areas to optimize their websites by leveraging Real User Monitoring data collected by <a href="https://www.akamai.com/us/en/products/performance/mpulse-real-user-monitoring.jsp" target="_blank" rel="noopener noreferrer">Akamai mPulse</a>.
-
-                            <p>In mid-2018 I transitioned to the product development team for mPulse where I had the opportunity to design and implement analysis and system dashboards for both internal and external audiences.</p>
+                            <div class="subheading mb-3">Senior Data Scientist II</div>
+                            <p> I served as Data Scientist and Product Owner for the Web Performance team for <a href="https://www.akamai.com/us/en/products/performance/mpulse-real-user-monitoring.jsp" target="_blank" rel="noopener noreferrer">Akamai mPulse</a>. Initially, I joined as a member of the Professional Services team, where I took on the role of a customer facing data science consultant for many of the world’s largest brands. After transitioning to a backend product development role, I built statistical models from large amounts of data to identify problem areas on customer websites and recommend actionable improvements toward the end user experience. I also created compelling visualizations to communicate these insights to executive management teams. </p>
+                            <p> 
+                                During my time at Akamai, I had the opportunity to share some of my work in public forums:
+                                <ul>
+                                    <li> <a href="https://calendar.perfplanet.com/2021/performance-implications-of-javascript-errors/" target="_blank" rel="noopener noreferrer"> Performance Implications of JavaScript Errors </a> </li>
+                                    <li> <a href="https://rumarchive.com/blog/2023-01-24-rum-archive-benfords-law/" target="_blank" rel="noopener noreferrer"> RUM Archive and Benford's Law </a> </li>
+                                    <li> <a href="https://blog.akamai-mpulse.com/blog/2023-12-14-rum-archive-holiday-traffic-2023/" target="_blank" rel="noopener noreferrer"> RUM Archive Holiday Traffic 2023 </a> </li>
+                                    <li> <a href="https://blog.akamai-mpulse.com/blog/2024-11-15-frustration-index-intro/" target="_blank" rel="noopener noreferrer"> An Introduction to the Frustration Index </a> </li>
+                                  </ul>
+                            </p>                        
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2017 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2017 - Dec 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp" target="_blank" rel="noopener noreferrer" style="color:#343a40;">SOASTA</a></h3>
                             <br>
                             <div class="subheading mb-3">Data Scientist</div>
-                            <p> I joined SOASTA as a Data Scientist after graduate school. In this new role, I was able to apply my existing quantitative training and further strengthen my computational knowledge using new tools and data frameworks. SOASTA was <a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp" target="_blank" rel="noopener noreferrer">acquired</a> by Akamai Technologies in April 2017.</p>
+                            <p> I joined SOASTA as a Data Scientist after graduate school. In this new role, I was able to apply my existing quantitative training and further strengthen my computational knowledge using new tools and data frameworks. </p> 
+                            <p> SOASTA was <a href="https://www.akamai.com/us/en/about/news/press/2017-press/akamai-completes-acquisition-of-soasta.jsp" target="_blank" rel="noopener noreferrer">acquired</a> by Akamai Technologies in April 2017. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2016 - April 2017</span></div>
                     </div>
@@ -126,9 +131,9 @@
                     <div class="subheading mb-3">Programming Languages &#38; Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i> 
-                            <a href="https://julialang.org/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Julia" src="assets/img/julia-logo-color.png" width="75" height="50"></img></a></i></li>
-                        <li class="list-inline-item"><i> 
                             <a href="https://www.python.org/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Python" src="assets/img/python-logo.png" width="75" height="70"></img></a></i></li>
+                        <li class="list-inline-item"><i> 
+                            <a href="https://julialang.org/" target="_blank" rel="noopener noreferrer"><img border="0" alt="Julia" src="assets/img/julia-logo-color.png" width="75" height="50"></img></a></i></li>                            
                         <li class="list-inline-item"><i> 
                             <a href="https://www.r-project.org/" target="_blank" rel="noopener noreferrer"><img border="0" alt="R" src="assets/img/R-logo.png" width="60" height="60"></img></a></i></li>
                         <li class="list-inline-item"><i> 
@@ -166,23 +171,33 @@
             </section>
             <hr class="m-0" />
             <!-- Interests-->
-<!--             <section class="resume-section" id="interests">
+            <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Write a blurb about interests here.</p>
-                    <p class="mb-0">More about interests here.</p>
+                    <p> Apart from being a Data Scientist, much of my free time is spent on the tennis court obsessing over every aspect of my equipment. I also enjoy doing jigsaw puzzles, watching movies, and chasing after my toddler.</p>
+                    <p> You can also find me questioning my sanity during basketball season as I remain a loyal New York Knicks fan. </p>
                 </div>
             </section>
-            <hr class="m-0" /> -->
+            <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards &#38; Certifications</h2>
+                    <div class="subheading mb-3">Awards</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Akamai Spot Award (November 2017)
                             <ul><li><i>Akamai’s Spot Award program acknowledges and rewards exceptional contributions made by employees, while recognizing efforts that exceed normal efforts and significantly impact Akamai’s core business.</i></li></ul>
+                        </li>
+                    </ul>
+                    <br> <br>
+                    <div class="subheading mb-3">Certifications</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>
+                            Python for Data Science and Machine Learning Bootcamp (Udemy)
+                            <!-- <ul><li><i>Akamai’s Spot Award program acknowledges and rewards exceptional contributions made by employees, while recognizing efforts that exceed normal efforts and significantly impact Akamai’s core business.</i></li></ul> -->
                         </li>
                     </ul>
                 </div>
